--- a/boarding/package.json
+++ b/boarding/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.2",
+    "@fingerprintjs/fingerprintjs": "^4.5.1",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-icons": "^1.3.1",
     "@radix-ui/react-label": "^2.1.0",
@@ -34,6 +35,7 @@
     "country-region-data": "^3.1.0",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.11.13",
+    "idb": "^8.0.0",
     "lucide-react": "^0.456.0",
     "next-themes": "^0.4.3",
     "react": "^18.3.1",
