--- a/boarding/package.json
+++ b/boarding/package.json
@@ -19,9 +19,11 @@
     "@fingerprintjs/fingerprintjs": "^4.5.1",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-checkbox": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -36,7 +38,9 @@
     "country-region-data": "^3.1.0",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.11.13",
+    "html2canvas": "^1.4.1",
     "idb": "^8.0.0",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.456.0",
     "next-themes": "^0.4.3",
     "react": "^18.3.1",
@@ -53,7 +57,8 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@types/node": "^22.9.0",
