--- a/boarding/package.json
+++ b/boarding/package.json
@@ -14,6 +14,7 @@
     "start": "astro dev"
   },
   "dependencies": {
+    "@astrojs/node": "^9.0.0",
     "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.2",
     "@fingerprintjs/fingerprintjs": "^4.5.1",
@@ -31,18 +32,27 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@react-input/mask": "^1.2.13",
+    "@react-pdf/renderer": "^4.1.5",
     "@scotato/react-squircle": "^1.1.3",
-    "astro": "^4.16.10",
+    "@types/better-sqlite3": "^7.6.12",
+    "@types/bun": "^1.1.14",
+    "astro": "^5.0.0",
+    "better-sqlite3": "^11.7.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "country-region-data": "^3.1.0",
     "date-fns": "^3.6.0",
+    "drizzle-orm": "^0.37.0",
     "framer-motion": "^11.11.13",
     "html2canvas": "^1.4.1",
+    "html2pdf": "^0.0.11",
+    "html2pdf.js": "^0.9.3",
     "idb": "^8.0.0",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.456.0",
     "next-themes": "^0.4.3",
+    "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^4.9.155",
     "react": "^18.3.1",
     "react-country-flag": "^3.1.0",
     "react-country-region-selector": "^3.6.1",
@@ -50,6 +60,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-input-mask": "^2.0.4",
+    "react-pdf": "^9.1.1",
     "react-smooth-corners": "^1.0.4",
     "react-to-pdf": "^1.0.1",
     "react-tooltip": "^5.28.0",
