--- a/boarding/package.json
+++ b/boarding/package.json
@@ -36,6 +36,7 @@
     "@scotato/react-squircle": "^1.1.3",
     "@types/better-sqlite3": "^7.6.12",
     "@types/bun": "^1.1.14",
+    "@types/fingerprintjs": "^0.5.28",
     "astro": "^5.0.0",
     "better-sqlite3": "^11.7.0",
     "class-variance-authority": "^0.7.0",
