--- a/boarding/package.json
+++ b/boarding/package.json
@@ -43,6 +43,7 @@
     "clsx": "^2.1.1",
     "country-region-data": "^3.1.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.7",
     "drizzle-orm": "^0.37.0",
     "framer-motion": "^11.11.13",
     "html2canvas": "^1.4.1",
