--- a/boarding/package.json
+++ b/boarding/package.json
@@ -19,6 +19,7 @@
     "@astrojs/tailwind": "^5.1.2",
     "@fingerprintjs/fingerprintjs": "^4.5.1",
     "@hookform/resolvers": "^3.9.1",
+    "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.1",
@@ -56,11 +57,13 @@
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^4.9.155",
     "react": "^18.3.1",
+    "react-aria-components": "^1.5.0",
     "react-country-flag": "^3.1.0",
     "react-country-region-selector": "^3.6.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
+    "react-imask": "^7.6.1",
     "react-input-mask": "^2.0.4",
     "react-pdf": "^9.1.1",
     "react-smooth-corners": "^1.0.4",
