database cleanup and README finished

--- a/boarding/.env.template
+++ b/boarding/.env.template
@@ -1,2 +1,5 @@
+# your Payabli API token
 PAYABLI_API_TOKEN="123...XYZ"
+
+# what Payabli environment to use: "sandbox" for testing, "production" for live
 PAYABLI_ENVIRONMENT="sandbox"
