--- a/boarding/.env.template
+++ b/boarding/.env.template
@@ -3,3 +3,7 @@ PAYABLI_API_TOKEN="123...XYZ"
 
 # what Payabli environment to use: "sandbox" for testing, "production" for live
 PAYABLI_ENVIRONMENT="sandbox"
+
+# your Clerk credentials
+PUBLIC_CLERK_PUBLISHABLE_KEY=123...XYZ
+CLERK_SECRET_KEY=123...XYZ
