implemented better-auth as an extra scaffolded authentication layer for the application

--- a/boarding/.env.template
+++ b/boarding/.env.template
@@ -3,3 +3,9 @@ PAYABLI_API_TOKEN="123...XYZ"
 
 # what Payabli environment to use: "sandbox" for testing, "production" for live
 PAYABLI_ENVIRONMENT="sandbox"
+
+# your better-auth secret
+BETTER_AUTH_SECRET=ABC...123
+
+# base URL of your app
+BETTER_AUTH_URL=http://localhost:4321 # https://my-production-site.com
