--- a/boarding/package.json
+++ b/boarding/package.json
@@ -39,6 +39,7 @@
     "@types/bun": "^1.1.14",
     "@types/fingerprintjs": "^0.5.28",
     "astro": "^5.0.0",
+    "better-auth": "^1.1.15",
     "better-sqlite3": "^11.7.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
