--- a/boarding/package.json
+++ b/boarding/package.json
@@ -17,6 +17,7 @@
     "@astrojs/node": "^9.0.0",
     "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.2",
+    "@better-auth/cli": "^1.3.7",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-checkbox": "^1.1.2",
@@ -48,7 +49,7 @@
     "framer-motion": "^11.11.13",
     "html2canvas": "^1.4.1",
     "html2pdf": "^0.0.11",
-    "html2pdf.js": "^0.9.3",
+    "html2pdf.js": "^0.10.3",
     "idb": "^8.0.0",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.456.0",
@@ -66,14 +67,14 @@
     "react-input-mask": "^2.0.4",
     "react-pdf": "^9.1.1",
     "react-smooth-corners": "^1.0.4",
-    "react-to-pdf": "^1.0.1",
+    "react-to-pdf": "^2.0.1",
     "react-tooltip": "^5.28.0",
     "sharp": "^0.33.5",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8",
+    "zod": "^4.0.17",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
@@ -88,3 +89,4 @@
   },
   "packageManager": "pnpm@9.12.3"
 }
+
