--- a/sdk/php-sdk/composer.json
+++ b/sdk/php-sdk/composer.json
@@ -6,14 +6,8 @@
     "require": {
         "php": "^8.1",
         "vlucas/phpdotenv": "^5.0",
-        "payabli/payabli": "*"
+        "payabli/payabli": "0.0.297"
     },
-    "repositories": [
-        {
-            "type": "path",
-            "url": "../../../fern-php-sdk"
-        }
-    ],
     "autoload": {
         "psr-4": {
             "App\\": "src/"
