--- a/sdk/py-sdk/requirements.txt
+++ b/sdk/py-sdk/requirements.txt
@@ -3,5 +3,4 @@ uvicorn==0.24.0
 python-multipart==0.0.6
 jinja2==3.1.2
 python-dotenv==1.0.0
-# Use the local Python SDK
--e ../../../fern-python-sdk
+payabli==0.0.282
