--- a/sdk/java-sdk/pom.xml
+++ b/sdk/java-sdk/pom.xml
@@ -22,9 +22,9 @@
     <dependencies>
         <!-- Payabli Java SDK -->
         <dependency>
-            <groupId>com.payabli</groupId>
-            <artifactId>api-sdk</artifactId>
-            <version>1.0.0</version>
+            <groupId>io.github.payabli</groupId>
+            <artifactId>sdk-java</artifactId>
+            <version>[0.0.293,)</version>
         </dependency>
         
         <!-- SDK Dependencies -->
@@ -56,6 +56,13 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.15.2</version>
+        </dependency>
+
+        <!-- Dotenv for loading .env files -->
+        <dependency>
+            <groupId>io.github.cdimascio</groupId>
+            <artifactId>dotenv-java</artifactId>
+            <version>3.0.0</version>
         </dependency>
 
         <!-- SLF4J and Logback for logging -->
