added payment method tokenization to all sdk applications

--- a/sdk/.vscode/settings.json
+++ b/sdk/.vscode/settings.json
@@ -7,5 +7,6 @@
         "**/Thumbs.db": true,
         "**/.vscode": true
     },
-    "hide-files.files": []
+    "hide-files.files": [],
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
