updated PHP .env.template

--- a/sdk/php-sdk/.env.template
+++ b/sdk/php-sdk/.env.template
@@ -1,3 +1,4 @@
 # Payabli API Configuration
 PAYABLI_KEY=your_api_key_here
 PAYABLI_ENTRY=your_entry_point_here
+PAYABLI_PUBLIC_TOKEN=your_public_token_here
