--- a/sdk/ts-sdk/.env.template
+++ b/sdk/ts-sdk/.env.template
@@ -1,3 +1,10 @@
-PAYABLI_ENTRY="41xxxxxa7e"
+# must be a private Payabli API key
 PAYABLI_KEY="o.Oim...Mekgjw="
-PAYABLI_PUBLIC_TOKEN="o.YOE...WPs8="
+
+# must be a public Payabli API key
+PUBLIC_PAYABLI_TOKEN="o.YOE...WPs8="
+
+# both of these are the same
+# should be your Payabli entrypoint
+PAYABLI_ENTRY="41xxxxxa7e"
+PUBLIC_PAYABLI_ENTRY="41xxxxxa7e"
